--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@ logs
 *.log
 npm-debug.log*
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Runtime data
 pids
 *.pid
