--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "env PROD_ENV=1 webpack"
   },
   "author": "Jean Bauer <https://github.com/jeanbauer>",
+  "repository": "https://github.com/jeanbauer/react-todo-playground-es6-hr-sass",
+  "license": "MIT",
   "dependencies": {
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
